# peras-design

./: .dockerignore  .envrc  .gitignore  .gitmodules  404.html  CNAME  Dockerfile  Logbook.md  Makefile  NOTICE  README.md  agda2hs.yaml  cabal.project  flake.nix  index.html  install_libblst.sh  install_libsecp256k1.sh  peras-design.cabal  peras.agda-lib  peras.cabal  rewrites.yaml  sitemap.xml
experiments/sketch/: Peras.hs  peras.cabal
peras-delta-q/: CHANGELOG.md  LICENSE  README.md  bench.html  block-diffusion  delta-q.cabal  deltaq.cabal  dqsd-vote.hs  hie.yaml  plot-dqsd.hs  plot.hs  shell.nix  x.dot
peras-delta-q/app/: DrawExamples.hs  Main.hs
peras-delta-q/bench/: Bench.hs
peras-delta-q/docs/: initial-notes.aux  initial-notes.tex  initial-notes.toc
peras-delta-q/haskell/: .gitignore
peras-delta-q/lib/: Convolution.hs
peras-delta-q/lib/DeltaQ/: Algebra.hs  GSV.hs
peras-delta-q/lib/DeltaQ/Algebra/: Class.hs  Simplification.hs  Type.hs
peras-delta-q/lib/DeltaQ/GSV/: ATM.hs
peras-delta-q/lib/DeltaQ/Numeric/: CDF.hs
peras-delta-q/lib/DeltaQ/Visualisation/: PlotUtils.hs
peras-delta-q/src/: A.hs  DrawExamples.hs  DrawOBox.hs  Examples.hs  Main.hs  NumericalCDF.hs  OBox.hs  Peras.hs  Reals.hs  UnitInterval.hs
peras-delta-q/src/DeltaQ/: QTA.hs
peras-delta-q/test/DeltaQ/: QTASpec.hs
peras-delta-q/tests/: ConvolutionSpec.hs  DQNormalisation.hs  NumericAspects.hs  plot-dqsd.hs  plot-test.hs
peras-delta-q/tests/DeltaQ/Algebra/: NormalisationSpec.hs
peras-hs/: ReadMe.md  peras-hs.cabal
peras-hs/golden/: Chain.json  Event.json  [Block].json
peras-hs/src/MAlonzo/: RTE.hs
peras-hs/src/MAlonzo/Code/: Function.hs  Level.hs
peras-hs/src/Peras/: ALBA.hs  Arbitraries.hs  Block.hs  Chain.hs  Crypto.hs  Event.hs  Message.hs  Nakamoto.hs  Network.hs  Numbering.hs  Orphans.hs  Params.hs  Protocol.hs  ProtocolL.hs  SmallStep.hs
peras-hs/src/Peras/QCD/: Crypto.hs  Protocol.hs  State.hs  Types.hs  Util.hs
peras-hs/src/Peras/SmallStep/: Analysis.hs  Execution.hs  Experiment.hs  Properties.hs
peras-hs/src/Prelude/: AssocList.hs
peras-hs/src/Protocol/: Peras.hs  PerasL.hs
peras-hs/test/Peras/: ALBASpec.hs  ChainSpec.hs  OrphansSpec.hs
peras-iosim/: .gitignore  ReadMe.md  cabal.project  flake.nix  one-node.yaml  peras-iosim.cabal  pseudo-peras.yaml  pseudo-praos.yaml  small-network.yaml
peras-iosim/analyses/block-production/: ReadMe.ipynb  experiment.sh  results.csv
peras-iosim/analyses/congestion/: ReadMe.md  pseudo-peras.yaml  run.sh  small-network.yaml
peras-iosim/analyses/february-demo/: chains-peras.dot  chains-praos.dot  network.dot  network.yaml  protocol-praos.yaml  run.sh
peras-iosim/analyses/parameters-v1/: ReadMe.md  Rollbacks.ipynb  network.yaml  protocol.yaml  rollback.patch  rollbacks.csv  run.sh
peras-iosim/analyses/split-brain/: ReadMe.md  experiment.sh  network-normal.yaml  network-split.yaml  protocol-peras.yaml  protocol-praos.yaml
peras-iosim/app/: Main.hs
peras-iosim/golden/: InEnvelope.json  OutEnvelope.json  Topology.json
peras-iosim/nix/: project.nix  shell.nix
peras-iosim/src/Peras/: IOSim.hs  Orphans.hs
peras-iosim/src/Peras/IOSim/: Chain.hs  Cost.hs  Crypto.hs  Experiment.hs  GraphViz.hs  Hash.hs  Message.hs  Network.hs  Node.hs  Nodes.hs  Protocol.hs  Simulate.hs  Types.hs  Util.hs
peras-iosim/test/Peras/: JsonSpec.hs
peras-iosim/test/Peras/Network/: TypesSpec.hs
peras-malonzo/: peras-malonzo.cabal
peras-malonzo/src/MAlonzo/Code/: Algebra.hs  Induction.hs
peras-malonzo/src/MAlonzo/RTE/: Float.hs
peras-markov/: ReadMe.md  example-input.yaml  example-output.tsv  honest-behavior.yaml  peras-markov.cabal  private-chain-behavior.yaml  threshold-behavior.yaml
peras-markov/app/: Main.hs
peras-markov/src/Peras/Markov/: Adversary.hs  Class.hs  Orphans.hs  Polynomial.hs
peras-markov/src/Peras/MarkovSim/: Decoupled.hs  Model.hs  Transition.hs  Types.hs
peras-markov/test/Peras/Markov/: PolynomialSpec.hs
peras-markov/test/Peras/MarkovSim/: ModelSpec.hs  TransitionSpec.hs
peras-rust/: Cargo.toml  build.rs  cbindgen.toml  peras.h
peras-rust/src/: block.rs  chain.rs  crypto.rs  event.rs  lib.rs  message.rs  network.rs  peras_node.rs
peras-rust/src/ffi/: mod.rs  network.rs  node.rs
peras-server/: ReadMe.md  example-input.yaml  example-request.json  index.html  index.js  peras-server.cabal  peras.css
peras-server/app/: App.hs  Main.hs
peras-server/src/Peras/: Server.hs
peras-server/src/Peras/Server/: App.hs
peras-simulation/: Conformance.md  ReadMe.md  bench-vote.html  example-input.yaml  example-output.yaml  example-trace.jsonarray  peras-simulation.cabal
peras-simulation/app/: External.hs  Pipe.hs  Simulate.hs  Visualize.hs  peras.hs
peras-simulation/app/Peras/Conformance/: ExternalSpec.hs
peras-simulation/bench/: Bench.hs
peras-simulation/conformance/: External.hs
peras-simulation/conformance/Peras/Conformance/: ExternalSpec.hs
peras-simulation/src/Peras/: Arbitraries.hs  Block.hs  Chain.hs  Crypto.hs  Foreign.hs  Numbering.hs  Util.hs
peras-simulation/src/Peras/Conformance/: Generators.hs  Model.hs  Orphans.hs  Params.hs  Test.hs  TestNew.hs
peras-simulation/src/Peras/Prototype/: BlockCreation.hs  BlockSelection.hs  BytesModulo.hs  Crypto.hs  Diffusion.hs  Environment.hs  Fetching.hs  Network.hs  Node.hs  Preagreement.hs  Trace.hs  (+3 more)
peras-simulation/test/Peras/: ChainSpec.hs  OrphansSpec.hs
peras-vote/: bench-vote.html  peras-vote.cabal
peras-vote/bench/: Bench.hs
peras_topology/: Cargo.toml  ReadMe.md  example-parameters.yaml
peras_topology/src/: lib.rs  main.rs  network.rs  parameters.rs
random-forks/: .gitignore  ReadMe.md  random-forks.cabal
random-forks/app/: Main.hs
random-forks/src/Peras/: RandomForks.hs
test-demo/: CHANGELOG.md  LICENSE  Makefile  test-demo.agda-lib  test-demo.cabal
test-demo/src/: CommonTypes.agda  CommonTypes.hs  FormalSpec.agda  Model.agda  Model.hs  ModelProofs.agda  Overview.lagda.md  ProofPrelude.agda  SoundnessProof.agda  Spec.agda  TargetModel.hs  TestModel.agda  TestModel.hs  TestModelQC.hs
test-demo/test/: Main.hs
(+1168 files in other folders)
