cabal-version:      3.0
name:               peras-design
version:            0.1.0.0
synopsis:           Peras types from Agda
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: ReadMe.md

library
  exposed-modules:
    Peras.Block
    Peras.Chain
    Peras.Crypto
    Peras.Message
    Peras.Nakamoto
    Peras.Network
  hs-source-dirs:   src
  build-depends:
    , base >=4.9 && <5
    , bytestring
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages
