cabal-version:       2.2
name:                peras
version:             0.1.0.0
synopsis:            Simulations for the Peras Protocol
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              IOG
maintainer:          engineering@iohk.io
copyright:           2023 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common project-config
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
  ghc-options:
    -Wwarn
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -- TODO: check what deprecated functions should be replaced with
    -Wno-deprecations

library
  import: project-config
  hs-source-dirs:      src
  exposed-modules:
    Peras.Block
    Peras.Chain
    Peras.Crypto
    Peras.Voting
  build-depends:       ansi-terminal
                     , base
                     , bytestring
                     , containers
                     , contra-tracer
                     , generic-lens
                     , io-classes
                     , io-sim
                     , optparse-applicative
                     , pretty-simple
                     , quiet
                     , random
                     , safe
                     , si-timers
                     , text
                     , time
                     , transformers
  ghc-options:
    -haddock

test-suite tests
  import: project-config
  hs-source-dirs: test
  other-modules:
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
      base
    , hspec
    , peras -any
    , QuickCheck -any
    , io-sim -any
    , si-timers
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options:
    -Wall
    -Wwarn
    -threaded
    -rtsopts
