name:           delta-q
version:        0.1.3
cabal-version:  >= 1.10
build-type:     Simple
author:         Neil Davies
license:        AllRightsReserved
copyright:      Predictable Network Solutions Limited, 2011-2016

library
  exposed-modules:    DeltaQ.Algebra
                    , DeltaQ.Algebra.Simplification
                    , DeltaQ.Algebra.Class
                    , DeltaQ.Algebra.Type
                    , DeltaQ.Algebra.DelayModel.SimpleUniform
                    , DeltaQ.GSV
                    , DeltaQ.GSV.ATM
                    , DeltaQ.Numeric.CDF
                    , DeltaQ.Numeric.CDF.Types
                    , DeltaQ.QTA.Support
                    , DeltaQ.RationalProbabilityDoubleDelay
                    , DeltaQ.Visualisation.PlotUtils
  build-depends:      base >= 4
                    , containers
                    , data-default
                    , ieee754
                    , lens
                    , mtl
                    , mwc-random
                    , primitive
                    , statistics
  default-language:   Haskell2010
  hs-source-dirs:     lib
  ghc-options:        -Wall
  default-extensions: UnicodeSyntax
  other-extensions:   KindSignatures
                    , GADTs
                    , MultiParamTypeClasses
                    , FlexibleContexts
                    , FlexibleInstances

executable plot-dqsd
  build-depends:      delta-q
                    , Chart >= 1.9
                    , Chart-cairo >= 1.9
                    , base
                    , mwc-random
                    , process
  main-is:            plot-dqsd.hs
  default-extensions: UnicodeSyntax
                      TypeApplications

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      DeltaQ.Algebra.NormalisationSpec
  build-depends:      delta-q
                    , QuickCheck
                    , base
                    , hspec
                    , random
  build-tool-depends:
       hspec-discover:hspec-discover
  ghc-options:        -Wall -rtsopts -threaded
  default-language:   Haskell2010
  default-extensions: StandaloneDeriving
                    , TypeSynonymInstances

-- test-suite dq-numeric-tests
--   type:               detailed-0.9
--   hs-source-dirs:     tests
--   test-module:        NumericAspects
--   build-depends:      base
--                     , DeltaQ
--   ghc-options:        -Wall -rtsopts -threaded
--   default-language:   Haskell2010
