name:           peras-delta-q
version:        0.1.3
cabal-version:  >= 1.10
build-type:     Simple
author:         Arnaud Bailly <arnaud.bailly@iohk.io>
license:        Apache2
copyright:      Input Output Global, 2024

executable plot-dqsd
  build-depends:      Chart >= 1.9
                    , Chart-cairo >= 1.9
                    , base
                    , dqsd-piecewise-poly
                    , mwc-random
                    , process
  main-is:            plot-dqsd.hs
  ghc-options:        -Wall -Wunused-packages
  default-extensions: UnicodeSyntax
                      TypeApplications
