cabal-version:      3.0
name:               peras-hs
version:            0.1.0.0
synopsis:           Peras types from Agda
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: ReadMe.md

data-dir: golden
data-files: *.json

library
  exposed-modules:
    MAlonzo.Code.Haskell.Prim.Maybe
    MAlonzo.Code.Haskell.Prim.Tuple
    MAlonzo.Code.Peras.Block
    MAlonzo.Code.Peras.Chain
    MAlonzo.Code.Peras.Crypto
    MAlonzo.Code.Peras.Numbering
    MAlonzo.Code.Peras.Params
    MAlonzo.Code.Peras.QQCD.Crypto
    MAlonzo.Code.Peras.QQCD.Crypto.Placeholders
    MAlonzo.Code.Peras.QQCD.Node.Model
    MAlonzo.Code.Peras.QQCD.Node.Preagreement
    MAlonzo.Code.Peras.QQCD.Node.Specification
    MAlonzo.Code.Peras.QQCD.Protocol
    MAlonzo.Code.Peras.QQCD.State
    MAlonzo.Code.Peras.QQCD.Types
    MAlonzo.Code.Peras.QQCD.Types.Instances
    MAlonzo.Code.Peras.QQCD.Util
    MAlonzo.Code.Peras.SmallStep
    MAlonzo.Code.Peras.SmallStep.Experiment
    MAlonzo.Code.Peras.SmallStep.Experiment.Impl
    MAlonzo.Code.Peras.SmallStep.Experiment.Types
    MAlonzo.RTE
    Peras.Arbitraries
    Peras.Block
    Peras.Chain
    Peras.Crypto
    Peras.Event
    Peras.Message
    Peras.Numbering
    Peras.Orphans
    Peras.QCD.Crypto
    Peras.QCD.Crypto.Placeholders
    Peras.QCD.Node.Model
    Peras.QCD.Node.Preagreement
    Peras.QCD.Node.Specification
    Peras.QCD.Protocol
    Peras.QCD.State
    Peras.QCD.Types
    Peras.QCD.Types.Instances
    Peras.QCD.Util
    Peras.SmallStep
    Peras.SmallStep.Experiment
    Peras.SmallStep.Experiment.Types
  other-modules:
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.Char
    MAlonzo.Code.Agda.Builtin.Equality.Erase
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.Float
    MAlonzo.Code.Agda.Builtin.FromNat
    MAlonzo.Code.Agda.Builtin.FromNeg
    MAlonzo.Code.Agda.Builtin.FromString
    MAlonzo.Code.Agda.Builtin.Int
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.Reflection
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.Strict
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.TrustMe
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Builtin.Word
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Algebra.Bundles
    MAlonzo.Code.Algebra.Bundles.Raw
    MAlonzo.Code.Algebra.Consequences.Base
    MAlonzo.Code.Algebra.Consequences.Propositional
    MAlonzo.Code.Algebra.Consequences.Setoid
    MAlonzo.Code.Algebra.Construct.LiftedChoice
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Max
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.Min
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Core
    MAlonzo.Code.Algebra.Definitions
    MAlonzo.Code.Algebra.Definitions.RawMagma
    MAlonzo.Code.Algebra.Definitions.RawMonoid
    MAlonzo.Code.Algebra.Definitions.RawSemiring
    MAlonzo.Code.Algebra
    MAlonzo.Code.Algebra.Lattice.Bundles
    MAlonzo.Code.Algebra.Lattice.Bundles.Raw
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
    MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
    MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
    MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
    MAlonzo.Code.Algebra.Lattice.Properties.Lattice
    MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
    MAlonzo.Code.Algebra.Lattice.Structures
    MAlonzo.Code.Algebra.Morphism.Definitions
    MAlonzo.Code.Algebra.Morphism
    MAlonzo.Code.Algebra.Morphism.Structures
    MAlonzo.Code.Algebra.Properties.AbelianGroup
    MAlonzo.Code.Algebra.Properties.CommutativeMonoid
    MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
    MAlonzo.Code.Algebra.Properties.Group
    MAlonzo.Code.Algebra.Properties.Monoid.Mult
    MAlonzo.Code.Algebra.Properties.Ring
    MAlonzo.Code.Algebra.Properties.RingWithoutOne
    MAlonzo.Code.Algebra.Properties.Semigroup
    MAlonzo.Code.Algebra.Properties.Semiring.Exp
    MAlonzo.Code.Algebra.Solver.Ring.AlmostCommutativeRing
    MAlonzo.Code.Algebra.Solver.Ring
    MAlonzo.Code.Algebra.Solver.Ring.Lemmas
    MAlonzo.Code.Algebra.Solver.Ring.Simple
    MAlonzo.Code.Algebra.Structures.Biased
    MAlonzo.Code.Algebra.Structures
    MAlonzo.Code.Axiom.Extensionality.Propositional
    MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
    MAlonzo.Code.Data.Bool.Base
    MAlonzo.Code.Data.Bool
    MAlonzo.Code.Data.Bool.Properties
    MAlonzo.Code.Data.DifferenceList
    MAlonzo.Code.Data.Empty
    MAlonzo.Code.Data.Empty.Irrelevant
    MAlonzo.Code.Data.Empty.Polymorphic
    MAlonzo.Code.Data.Fin.Base
    MAlonzo.Code.Data.Fin
    MAlonzo.Code.Data.Fin.Patterns
    MAlonzo.Code.Data.Fin.Properties
    MAlonzo.Code.Data.Irrelevant
    MAlonzo.Code.Data.List.Base
    MAlonzo.Code.Data.List.Effectful
    MAlonzo.Code.Data.List.Extrema.Core
    MAlonzo.Code.Data.List.Extrema
    MAlonzo.Code.Data.List
    MAlonzo.Code.Data.List.Membership.Propositional
    MAlonzo.Code.Data.List.Membership.Propositional.Properties.Core
    MAlonzo.Code.Data.List.Membership.Propositional.Properties
    MAlonzo.Code.Data.List.Membership.Setoid
    MAlonzo.Code.Data.List.Membership.Setoid.Properties
    MAlonzo.Code.Data.List.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Equality.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Permutation.Homogeneous
    MAlonzo.Code.Data.List.Relation.Binary.Permutation.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Permutation.Propositional.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Permutation.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Permutation.Setoid.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Base
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise
    MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous.Core
    MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous
    MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Sublist.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional.Properties
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid
    MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid.Properties
    MAlonzo.Code.Data.List.Relation.Unary.All
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Core
    MAlonzo.Code.Data.List.Relation.Unary.AllPairs
    MAlonzo.Code.Data.List.Relation.Unary.Any
    MAlonzo.Code.Data.List.Relation.Unary.Any.Properties
    MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid
    MAlonzo.Code.Data.Maybe.Base
    MAlonzo.Code.Data.Maybe
    MAlonzo.Code.Data.Maybe.Properties
    MAlonzo.Code.Data.Maybe.Relation.Unary.All
    MAlonzo.Code.Data.Maybe.Relation.Unary.Any
    MAlonzo.Code.Data.Nat.Base
    MAlonzo.Code.Data.Nat.Divisibility.Core
    MAlonzo.Code.Data.Nat.Divisibility
    MAlonzo.Code.Data.Nat.DivMod.Core
    MAlonzo.Code.Data.Nat.DivMod
    MAlonzo.Code.Data.Nat.GeneralisedArithmetic
    MAlonzo.Code.Data.Nat
    MAlonzo.Code.Data.Nat.Induction
    MAlonzo.Code.Data.Nat.Properties
    MAlonzo.Code.Data.Nat.Solver
    MAlonzo.Code.Data.Parity.Base
    MAlonzo.Code.Data.Product.Algebra
    MAlonzo.Code.Data.Product.Base
    MAlonzo.Code.Data.Product.Function.Dependent.Propositional
    MAlonzo.Code.Data.Product.Function.NonDependent.Propositional
    MAlonzo.Code.Data.Product.Function.NonDependent.Setoid
    MAlonzo.Code.Data.Product
    MAlonzo.Code.Data.Product.Properties
    MAlonzo.Code.Data.Product.Relation.Binary.Pointwise.NonDependent
    MAlonzo.Code.Data.Product.Relation.Unary.All
    MAlonzo.Code.Data.Sign.Base
    MAlonzo.Code.Data.Sum.Algebra
    MAlonzo.Code.Data.Sum.Base
    MAlonzo.Code.Data.Sum.Function.Propositional
    MAlonzo.Code.Data.Sum.Function.Setoid
    MAlonzo.Code.Data.Sum
    MAlonzo.Code.Data.Sum.Properties
    MAlonzo.Code.Data.Sum.Relation.Binary.Pointwise
    MAlonzo.Code.Data.These.Base
    MAlonzo.Code.Data.Tree.AVL.Height
    MAlonzo.Code.Data.Tree.AVL
    MAlonzo.Code.Data.Tree.AVL.Indexed
    MAlonzo.Code.Data.Tree.AVL.Key
    MAlonzo.Code.Data.Tree.AVL.Map
    MAlonzo.Code.Data.Tree.AVL.Value
    MAlonzo.Code.Data.Unit.Base
    MAlonzo.Code.Data.Unit
    MAlonzo.Code.Data.Unit.Polymorphic.Base
    MAlonzo.Code.Data.Unit.Polymorphic
    MAlonzo.Code.Data.Unit.Polymorphic.Properties
    MAlonzo.Code.Data.Unit.Properties
    MAlonzo.Code.Data.Vec.Base
    MAlonzo.Code.Data.Vec.Functional
    MAlonzo.Code.Data.Vec.NZ45Zary
    MAlonzo.Code.Effect.Applicative
    MAlonzo.Code.Effect.Choice
    MAlonzo.Code.Effect.Empty
    MAlonzo.Code.Effect.Functor
    MAlonzo.Code.Effect.Monad
    MAlonzo.Code.Function.Base
    MAlonzo.Code.Function.Bundles
    MAlonzo.Code.Function.Consequences
    MAlonzo.Code.Function.Consequences.Propositional
    MAlonzo.Code.Function.Consequences.Setoid
    MAlonzo.Code.Function.Construct.Composition
    MAlonzo.Code.Function.Construct.Identity
    MAlonzo.Code.Function.Construct.Symmetry
    MAlonzo.Code.Function.Core
    MAlonzo.Code.Function.Definitions
    MAlonzo.Code.Function.Dependent.Bundles
    MAlonzo.Code.Function
    MAlonzo.Code.Function.Indexed.Relation.Binary.Equality
    MAlonzo.Code.Function.Metric.Bundles
    MAlonzo.Code.Function.Metric.Core
    MAlonzo.Code.Function.Metric.Definitions
    MAlonzo.Code.Function.Metric.Nat.Bundles
    MAlonzo.Code.Function.Metric.Nat.Core
    MAlonzo.Code.Function.Metric.Nat.Definitions
    MAlonzo.Code.Function.Metric.Nat
    MAlonzo.Code.Function.Metric.Nat.Structures
    MAlonzo.Code.Function.Metric.Structures
    MAlonzo.Code.Function.Properties.Bijection
    MAlonzo.Code.Function.Properties.Inverse.HalfAdjointEquivalence
    MAlonzo.Code.Function.Properties.Inverse
    MAlonzo.Code.Function.Properties.RightInverse
    MAlonzo.Code.Function.Properties.Surjection
    MAlonzo.Code.Function.Related.Propositional
    MAlonzo.Code.Function.Related.TypeIsomorphisms
    MAlonzo.Code.Function.Strict
    MAlonzo.Code.Function.Structures.Biased
    MAlonzo.Code.Function.Structures
    MAlonzo.Code.Haskell.Law.Applicative.Def
    MAlonzo.Code.Haskell.Law.Applicative.Either
    MAlonzo.Code.Haskell.Law.Applicative
    MAlonzo.Code.Haskell.Law.Applicative.IO
    MAlonzo.Code.Haskell.Law.Applicative.List
    MAlonzo.Code.Haskell.Law.Applicative.Maybe
    MAlonzo.Code.Haskell.Law.Bool
    MAlonzo.Code.Haskell.Law.Eq.Bool
    MAlonzo.Code.Haskell.Law.Eq.Def
    MAlonzo.Code.Haskell.Law.Eq
    MAlonzo.Code.Haskell.Law.Eq.Maybe
    MAlonzo.Code.Haskell.Law.Eq.Ordering
    MAlonzo.Code.Haskell.Law.Equality
    MAlonzo.Code.Haskell.Law.Functor.Def
    MAlonzo.Code.Haskell.Law.Functor.Either
    MAlonzo.Code.Haskell.Law.Functor
    MAlonzo.Code.Haskell.Law.Functor.IO
    MAlonzo.Code.Haskell.Law.Functor.List
    MAlonzo.Code.Haskell.Law.Functor.Maybe
    MAlonzo.Code.Haskell.Law
    MAlonzo.Code.Haskell.Law.List
    MAlonzo.Code.Haskell.Law.Maybe
    MAlonzo.Code.Haskell.Law.Monad.Def
    MAlonzo.Code.Haskell.Law.Monad.Either
    MAlonzo.Code.Haskell.Law.Monad
    MAlonzo.Code.Haskell.Law.Monad.IO
    MAlonzo.Code.Haskell.Law.Monad.List
    MAlonzo.Code.Haskell.Law.Monad.Maybe
    MAlonzo.Code.Haskell.Law.Monoid.Def
    MAlonzo.Code.Haskell.Law.Monoid
    MAlonzo.Code.Haskell.Law.Monoid.List
    MAlonzo.Code.Haskell.Law.Monoid.Maybe
    MAlonzo.Code.Haskell.Law.Ord.Bool
    MAlonzo.Code.Haskell.Law.Ord.Def
    MAlonzo.Code.Haskell.Law.Ord
    MAlonzo.Code.Haskell.Law.Ord.Maybe
    MAlonzo.Code.Haskell.Law.Ord.Ordering
    MAlonzo.Code.Haskell.Law.Semigroup.Def
    MAlonzo.Code.Haskell.Law.Semigroup.Either
    MAlonzo.Code.Haskell.Law.Semigroup.List
    MAlonzo.Code.Haskell.Law.Semigroup.Maybe
    MAlonzo.Code.Haskell.Prelude
    MAlonzo.Code.Haskell.Prim.Absurd
    MAlonzo.Code.Haskell.Prim.Applicative
    MAlonzo.Code.Haskell.Prim.Bool
    MAlonzo.Code.Haskell.Prim.Bounded
    MAlonzo.Code.Haskell.Prim.Double
    MAlonzo.Code.Haskell.Prim.Either
    MAlonzo.Code.Haskell.Prim.Enum
    MAlonzo.Code.Haskell.Prim.Eq
    MAlonzo.Code.Haskell.Prim.Foldable
    MAlonzo.Code.Haskell.Prim.Functor
    MAlonzo.Code.Haskell.Prim
    MAlonzo.Code.Haskell.Prim.Integer
    MAlonzo.Code.Haskell.Prim.Int
    MAlonzo.Code.Haskell.Prim.IO
    MAlonzo.Code.Haskell.Prim.List
    MAlonzo.Code.Haskell.Prim.Monad
    MAlonzo.Code.Haskell.Prim.Monoid
    MAlonzo.Code.Haskell.Prim.Num
    MAlonzo.Code.Haskell.Prim.Ord
    MAlonzo.Code.Haskell.Prim.Show
    MAlonzo.Code.Haskell.Prim.String
    MAlonzo.Code.Haskell.Prim.Traversable
    MAlonzo.Code.Haskell.Prim.Word
    MAlonzo.Code.Induction
    MAlonzo.Code.Induction.WellFounded
    MAlonzo.Code.Level
    MAlonzo.Code.Relation.Binary.Bundles
    MAlonzo.Code.Relation.Binary.Consequences
    MAlonzo.Code.Relation.Binary.Construct.Add.Extrema.Equality
    MAlonzo.Code.Relation.Binary.Construct.Add.Extrema.NonStrict
    MAlonzo.Code.Relation.Binary.Construct.Add.Extrema.Strict
    MAlonzo.Code.Relation.Binary.Construct.Add.Infimum.Equality
    MAlonzo.Code.Relation.Binary.Construct.Add.Infimum.NonStrict
    MAlonzo.Code.Relation.Binary.Construct.Add.Infimum.Strict
    MAlonzo.Code.Relation.Binary.Construct.Add.Point.Equality
    MAlonzo.Code.Relation.Binary.Construct.Add.Supremum.Equality
    MAlonzo.Code.Relation.Binary.Construct.Add.Supremum.NonStrict
    MAlonzo.Code.Relation.Binary.Construct.Add.Supremum.Strict
    MAlonzo.Code.Relation.Binary.Construct.Flip.EqAndOrd
    MAlonzo.Code.Relation.Binary.Construct.Intersection
    MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
    MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
    MAlonzo.Code.Relation.Binary.Construct.On
    MAlonzo.Code.Relation.Binary.Core
    MAlonzo.Code.Relation.Binary.Definitions
    MAlonzo.Code.Relation.Binary
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
    MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
    MAlonzo.Code.Relation.Binary.Lattice.Bundles
    MAlonzo.Code.Relation.Binary.Lattice.Definitions
    MAlonzo.Code.Relation.Binary.Lattice
    MAlonzo.Code.Relation.Binary.Lattice.Structures
    MAlonzo.Code.Relation.Binary.Morphism.Definitions
    MAlonzo.Code.Relation.Binary.Morphism.Structures
    MAlonzo.Code.Relation.Binary.Properties.DecTotalOrder
    MAlonzo.Code.Relation.Binary.Properties.Poset
    MAlonzo.Code.Relation.Binary.Properties.Preorder
    MAlonzo.Code.Relation.Binary.Properties.Setoid
    MAlonzo.Code.Relation.Binary.Properties.TotalOrder
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
    MAlonzo.Code.Relation.Binary.PropositionalEquality
    MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
    MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
    MAlonzo.Code.Relation.Binary.Reasoning.Preorder
    MAlonzo.Code.Relation.Binary.Reasoning.Setoid
    MAlonzo.Code.Relation.Binary.Reasoning.Syntax
    MAlonzo.Code.Relation.Binary.Reflection
    MAlonzo.Code.Relation.Binary.Structures.Biased
    MAlonzo.Code.Relation.Binary.Structures
    MAlonzo.Code.Relation.Nullary.Construct.Add.Extrema
    MAlonzo.Code.Relation.Nullary.Construct.Add.Infimum
    MAlonzo.Code.Relation.Nullary.Construct.Add.Point
    MAlonzo.Code.Relation.Nullary.Construct.Add.Supremum
    MAlonzo.Code.Relation.Nullary.Decidable.Core
    MAlonzo.Code.Relation.Nullary.Decidable
    MAlonzo.Code.Relation.Nullary
    MAlonzo.Code.Relation.Nullary.Indexed
    MAlonzo.Code.Relation.Nullary.Negation.Core
    MAlonzo.Code.Relation.Nullary.Negation
    MAlonzo.Code.Relation.Nullary.Reflects
    MAlonzo.Code.Relation.Unary
    MAlonzo.Code.Relation.Unary.Properties
    MAlonzo.RTE.Float
  hs-source-dirs:   src
  build-depends:
                      aeson
                , QuickCheck
                , base >=4.9 && <5
                , base16-bytestring
                , binary
                , bytestring
                , generic-random
                , hashable
                , io-classes
                , lens
                , mtl
                , quickcheck-instances
                , text
                , time
  default-extensions:  StrictData
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages
                    -fno-warn-missing-pattern-synonym-signatures
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
                    -fno-warn-type-defaults
                    -fno-warn-unused-imports
                    -fno-warn-unused-matches

test-suite peras-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Peras.ChainSpec
                      Peras.OrphansSpec
                      Paths_peras_hs
    build-depends:
                        base >= 4.9 && <5
                  , QuickCheck
                  , hspec
                  , hspec-golden-aeson
                  , peras-hs
                  , quickcheck-classes

    build-tool-depends:
       hspec-discover:hspec-discover

    ghc-options: -rtsopts -threaded
