cabal-version:      3.0
name:               peras-hs
version:            0.1.0.0
synopsis:           Peras types from Agda
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: ReadMe.md

data-dir: golden
data-files: *.json

library
  exposed-modules:
    Peras.Arbitraries
    Peras.Block
    Peras.Chain
    Peras.Crypto
    Peras.Event
    Peras.Message
    Peras.Numbering
    Peras.Orphans
    Peras.SmallStep
    Peras.Abstract.Protocol.Model
    Peras.Abstract.Protocol.Params
  other-modules:
  hs-source-dirs:   src
  build-depends:
                      aeson
                , QuickCheck
                , base >=4.9 && <5
                , base16-bytestring
                , bytestring
                , data-default
                , generic-random
                , hashable
                , io-classes
                , quickcheck-instances
                , text
                , time
  default-extensions:  StrictData
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages
                    -fno-warn-missing-pattern-synonym-signatures
                    -fno-warn-missing-signatures
                    -fno-warn-name-shadowing
                    -fno-warn-type-defaults
                    -fno-warn-unused-imports
                    -fno-warn-unused-matches

test-suite peras-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Peras.ChainSpec
                      Peras.OrphansSpec
                      Paths_peras_hs
    build-depends:
                        base >= 4.9 && <5
                  , QuickCheck
                  , hspec
                  , hspec-golden-aeson
                  , peras-hs
                  , quickcheck-classes

    build-tool-depends:
       hspec-discover:hspec-discover

    ghc-options: -Wall -Wunused-packages -rtsopts -threaded
