cabal-version:      3.0
name:               peras-iosim
version:            0.1.0.0
synopsis:           Experiments with peras voting.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: ReadMe.md

data-dir: golden
data-files: *.json

library
  exposed-modules:
    Peras.IOSim.Chain
    Peras.IOSim.Chain.Types
    Peras.IOSim.Crypto
    Peras.IOSim.GraphViz
    Peras.IOSim.Hash
    Peras.IOSim.Message.Types
    Peras.IOSim.Network
    Peras.IOSim.Network.Types
    Peras.IOSim.Node
    Peras.IOSim.Node.Types
    Peras.IOSim.Protocol
    Peras.IOSim.Protocol.Types
    Peras.IOSim.Simulate
    Peras.IOSim.Simulate.Types
    Peras.IOSim.Types
  other-modules:
    Control.Monad.IOSim.Orphans
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , generic-random
    , io-classes
    , io-sim
    , language-dot
    , lens
    , MonadRandom
    , mtl
    , peras-hs
    , QuickCheck
    , quickcheck-instances
    , random
  default-extensions:  StrictData
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

executable peras-iosim
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Paths_peras_iosim
  build-depends:
    , base >=4.9 && <5
    , directory
    , optparse-applicative
    , peras-iosim
    , process
    , temporary
    , yaml
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Peras.JsonSpec
                      Paths_peras_iosim
    build-depends:
                          base >= 4.9 && <5
                  , QuickCheck
                  , hspec
                  , hspec-golden-aeson
                  , hspec-golden-aeson
                  , peras-iosim
                  , quickcheck-classes

    build-tool-depends:
       hspec-discover:hspec-discover

    ghc-options: -rtsopts -threaded
